# aws-summary-report

./: .gitignore  README.org  config.example.toml  email_formatter.py  main.py  pyproject.toml  utils.py
aws-summary/: README.org
sections/: acm.py  cloudfront.py  cloudwatch.py  config.py  costexplorer.py  route53.py  s3.py  securityhub.py
