[project]
name = "aws-summary"
version = "0.1.0"
description = "A Python app that sends plaintext email reports with AWS service info."
authors = [
    { name="Christian Cleberg", email="hello@cleberg.net" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
    "toml>=0.10.2",
    "tabulate>=0.9.0"
]

[project.scripts]
aws-email-reporter = "main:main"

[tool.setuptools]
packages = ["sections"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
strict = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]